我希望在本機開發，故請保留 tsx 檔，請提供我使用 Babel 轉譯的方式，應該可以做到修改檔案自動轉譯吧? 並請再提供 html 以及可自動開啟並執行已轉譯之 js 檔的方法。

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1>ChrisTorng AI Tools</h1>
     <div>
-
         <img src="Minesweeper/icon.svg" alt="Minesweeper Icon" style="width:1em;height:1em;">
         <a href="Minesweeper/index.html">Minesweeper</a>
     </div>
     <div><a href="ImagesCompare/index.html">ImagesCompare</a></div>
+    <div><a href="HarmonicGenerator/dist/index.html">HarmonicGenerator</a></div>
 
 </body>
 
