chore: Update AI Tools README and index.html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 
 <body>
     <h1>ChrisTorng AI Tools</h1>
-    <div>
-        <img src="Minesweeper/icon.svg" alt="Minesweeper Icon" style="width:1em;height:1em;">
-        <a href="Minesweeper/index.html">Minesweeper</a>
-    </div>
-    <div><a href="ImagesCompare/index.html">ImagesCompare</a></div>
-    <div><a href="HarmonicGenerator/dist/index.html">HarmonicGenerator</a></div>
-
+    <div>Collect my AI generated tools.</div>
+    <ul>
+        <li>
+            <a href="Minesweeper/index.html">
+                <img src="Minesweeper/icon.svg" alt="Minesweeper Icon" style="width:1em;height:1em;">
+                Minesweeper</a>
+        </li>
+        <li><a href="ImagesCompare/index.html">Images Compare</a></li>
+        <li><a href="HarmonicGenerator/dist/index.html">Harmonic Generator</a></li>
+    </ul>
+    <div><a href="https://github.com/ChrisTorng/AI-Tools">GitHub</a></div>
 </body>
 
 </html>
