我想上傳到靜態網頁空間，要如何上傳，網址應該是?

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </li>
         <li><a href="ImagesCompare/index.html">Images Compare</a></li>
         <li><a href="HarmonicGenerator/dist/index.html">Harmonic Generator</a></li>
+        <li><a href="labor-standards-act-game/out/">Labor Standards Act Game</a></li>
     </ul>
     <div><a href="https://github.com/ChrisTorng/AI-Tools">GitHub</a></div>
 </body>
