fix(ImagesCompare): 更新圖片路徑以正確顯示圖片
新增 .gitignore 檔案以排除 images 目錄，並新增 VSCode 設定以支援即時預覽。

--- a/ImagesCompare/index.html
+++ b/ImagesCompare/index.html
@@ -112,15 +112,15 @@
 
     <script>
         const images = [
-            {"url": "../images/Elementary/畢業紀念照.jpg", "title": "原始照片"},
-            {"url": "../images/Elementary/畢業紀念照高解析度.jpg", "title": "高解析度"},
-            {"url": "../images/Elementary/畢業紀念照 upscale.png", "title": "upscale"},
-            {"url": "../images/Elementary/畢業紀念照 supir upscale.png", "title": "supir upscale"},
-            {"url": "../images/Elementary/畢業紀念照 ReFocusV3 upscale.png", "title": "ReFocusV3upscale"},
-            {"url": "../images/Elementary/ComfyUI_temp_szaiv_00001_.png", "title": "1"},
-            {"url": "../images/Elementary/ComfyUI_temp_szaiv_00005_.png", "title": "5"},
-            {"url": "../images/Elementary/ComfyUI_temp_szaiv_00006_.png", "title": "6"},
-            {"url": "../images/Elementary/ComfyUI_temp_szaiv_00009_.png", "title": "9"},
+            {"url": "./images/畢業紀念照.jpg", "title": "原始照片"},
+            {"url": "./images/畢業紀念照高解析度.jpg", "title": "高解析度"},
+            {"url": "./images/畢業紀念照 upscale.png", "title": "upscale"},
+            {"url": "./images/畢業紀念照 supir upscale.png", "title": "supir upscale"},
+            {"url": "./images/畢業紀念照 ReFocusV3 upscale.png", "title": "ReFocusV3upscale"},
+            {"url": "./images/ComfyUI_temp_szaiv_00001_.png", "title": "1"},
+            {"url": "./images/ComfyUI_temp_szaiv_00005_.png", "title": "5"},
+            {"url": "./images/ComfyUI_temp_szaiv_00006_.png", "title": "6"},
+            {"url": "./images/ComfyUI_temp_szaiv_00009_.png", "title": "9"},
         ];
 
         const slider = document.querySelector('.slider');
